<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.comas.grush.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_productDetails"
            app:destination="@id/productDetailsFragment" >
            <argument
                android:name="editable"
                android:defaultValue="false" />
        </action>
        <action
            android:id="@+id/action_home_to_productCreate"
            app:destination="@id/productCreateFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.comas.grush.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_gallery_to_productDetails"
            app:destination="@id/productDetailsFragment" >
            <argument
                android:name="editable"
                android:defaultValue="true" />
        </action>
        <action
            android:id="@+id/action_gallery_to_authentication"
            app:destination="@id/nav_authentication" />
        <action
            android:id="@+id/action__gallery_to_productCreate"
            app:destination="@id/productCreateFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_authentication"
        android:name="com.comas.grush.ui.authentication.AuthenticationFragment"
        android:label="@string/menu_authentication"
        tools:layout="@layout/fragment_authentication" />
    <fragment
        android:id="@+id/productFragment"
        android:name="com.comas.grush.ui.product.ProductFragment"
        android:label="product_fragment"
        tools:layout="@layout/product_fragment" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.comas.grush.ui.product.ProductDetailsFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="product_id"
            app:argType="string" />
        <argument
            android:name="editable"
            app:argType="boolean" />
        <action
            android:id="@+id/action_productDetails_to_productEdit"
            app:destination="@id/productEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/productCreateFragment"
        android:name="com.comas.grush.ui.product.ProductCreateFragment"
        android:label="Create a Product"
        tools:layout="@layout/fragment_product_create" />
    <fragment
        android:id="@+id/productEditFragment"
        android:name="com.comas.grush.ui.product.ProductEditFragment"
        android:label="Edit Product"
        tools:layout="@layout/fragment_product_edit">
        <argument
            android:name="product_id"
            app:argType="string" />
        <action
            android:id="@+id/action_productEdit_to__gallery"
            app:destination="@id/nav_gallery" />
    </fragment>
</navigation>